[gd_scene load_steps=4 format=3 uid="uid://bi5mucmua830w"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_2q34u"]
[ext_resource type="FontFile" uid="uid://cnljrs73u3u8k" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="1_vety6"]
[ext_resource type="Texture2D" uid="uid://b22u21o23jdy8" path="res://Scenes/main_menu_texture.tres" id="2_sc5n5"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2q34u")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_sc5n5")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_right = 272.0
offset_bottom = 64.0
grow_horizontal = 2
scale = Vector2(1.02657, 1.13284)
theme_override_fonts/font = ExtResource("1_vety6")
theme_override_font_sizes/font_size = 64
text = "
Spy Break"
vertical_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -69.0
offset_right = 240.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Play" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vety6")
theme_override_font_sizes/font_size = 48
text = "Play"

[node name="Level" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vety6")
theme_override_font_sizes/font_size = 48
text = "Levels"

[node name="Credits" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_vety6")
theme_override_font_sizes/font_size = 48
text = "Credits"

[connection signal="pressed" from="TextureRect/VBoxContainer/Play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Level" to="." method="_on_level_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
